--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
 <h1>Basic Exercise Principles</h1>
 <h3>Introduction</h3>
-<p> For those interested in exercise science and how certain exercises affect you, the <i>Prepilin's Chart</i> 
+<p> For those interested in exercise science and how certain exercises affect you, the <i>Prilepin's Chart</i> 
 will be essential for power and olympic lifting purposes. Those aiming for an increased personal record for lifts 
 involving the typical bench, squat, deadlift, cling and press etc. will have to abide by a reasonable program. 
 Details will be explained in the next paragraph.</p>
 
 <h3>Details Explained</h3>
-<p> Different rep ranges involve different purposes when building a program based off of the <i>Prepilin's Chart</i>.
+<p> Different rep ranges involve different purposes when building a program based off of the <i>Prilepin's's Chart</i>.
 Muscle builidng (8-15 reps), strength (5-7), and power (1-4) all play important roles while using the <i>Prepilin's Chart</i>. 
 All need to be present in a program for an appropiate duration to allow the human body to recuperate properly.</p>
 
-<h2>Prepilin's Chart</h2>
+<h2>Prilepin's Chart</h2>
 
 <table width="700" cellpadding="20" cellspacing="5">
 <tr>
