--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ involving the typical bench, squat, deadlift, cling and press etc. will have to 
 Details will be explained in the next paragraph.</p>
 
 <h3>Details Explained</h3>
-<p> Different rep ranges involve different purposes when building a program based off of the <i>Prilepin's's Chart</i>.
-Muscle builidng (8-15 reps), strength (5-7), and power (1-4) all play important roles while using the <i>Prepilin's Chart</i>. 
+<p> Different rep ranges involve different purposes when building a program based off of the <i>Prilepin's Chart</i>.
+Muscle builidng (8-15 reps), strength (5-7), and power (1-4) all play important roles while using the <i>Prilepin's Chart</i>. 
 All need to be present in a program for an appropiate duration to allow the human body to recuperate properly.</p>
 
 <h2>Prilepin's Chart</h2>
